--- a/classdemo/w6/w6.md
+++ b/classdemo/w6/w6.md
@@ -2,7 +2,10 @@
 
 ![](截圖1.png)
 
+### P2: setup routes / for Dashboard, /landing for landing page, /register for Register page
 
-### P2: setup routes / for Dashboard, /landing for landing page, /register for Register page 
+![](截圖2.png)
 
-![]()
+### P3: implement 404 not found page
+
+![](截圖3.png)
