--- a/classdemo/w6/w6.md
+++ b/classdemo/w6/w6.md
@@ -9,3 +9,7 @@
 ### P3: implement 404 not found page
 
 ![](截圖3.png)
+
+### P4: Test e.target on Form fields (name, email, password)
+
+![](截圖4.png)
