--- a/classdemo/w8/w8_16.md
+++ b/classdemo/w8/w8_16.md
@@ -1,3 +1,13 @@
 ### W08-P1 create a express web server with route /
 
 ![](截圖1.png)
+
+![](截圖2.png)
+
+### W08-P2 connect MongoDB server
+
+![](截圖5.png)
+
+### W08-P3 Use MongoCompass to create database demo_16 and collection user, enter one document that has ur name and sid
+
+![](截圖4.png)
