W08-P3 Use MongoCompass to create database demo_xx and collection user, enter one document that has your name and sid

--- a/classdemo/w8/w8_16.md
+++ b/classdemo/w8/w8_16.md
@@ -11,3 +11,5 @@
 ### W08-P3 Use MongoCompass to create database demo_16 and collection user, enter one document that has ur name and sid
 
 ![](截圖4.png)
+
+![](截圖6.png)
